--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,11 @@
     "public/locales",
     "src/shared/config/i18n"
   ],
-  "i18n-ally.keystyle": "nested"
+  "i18n-ally.keystyle": "nested",
+  "eslint.enable": true,
+  
+  "eslint.validate": [ "javascript", "javascriptreact", "html", "typescriptreact" ],
+  "eslint.workingDirectories": [
+    "./src"
+],
 }
