--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,10 +4,13 @@
     "src/shared/config/i18n"
   ],
   "i18n-ally.keystyle": "nested",
-  "eslint.enable": true,
-  
-  "eslint.validate": [ "javascript", "javascriptreact", "html", "typescriptreact" ],
-  "eslint.workingDirectories": [
-    "./src"
-],
+  "editor.codeActionsOnSave": {
+    "source.fixAll.eslint": "explicit"
+  },
+  "eslint.validate": [
+    "javascript",
+    "javascriptreact",
+    "typescript",
+    "typescriptreact",
+  ],
 }
