--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "@storybook/addon-onboarding": "^8.4.7",
     "@storybook/addon-webpack5-compiler-swc": "^1.0.5",
     "@storybook/blocks": "^8.4.7",
-    "@storybook/react": "^8.4.7",
+    "@storybook/react": "^8.5.0",
     "@storybook/react-webpack5": "^8.4.7",
     "@storybook/test": "^8.4.7",
     "@storybook/testing-library": "^0.2.2",
@@ -72,6 +72,7 @@
     "json-server": "^0.17.0",
     "loki": "^0.28.1",
     "mini-css-extract-plugin": "^2.5.3",
+    "react-docgen": "^7.1.0",
     "react-refresh": "^0.12.0",
     "reg-cli": "^0.17.6",
     "regenerator-runtime": "^0.13.9",
@@ -91,6 +92,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.0",
+    "ajv": "^8.17.1",
     "axios": "^0.26.1",
     "concurrently": "^7.0.0",
     "i18next": "^21.6.11",
