--- a/package.json
+++ b/package.json
@@ -70,7 +70,7 @@
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "json-server": "^0.17.0",
-    "loki": "^0.28.1",
+    "loki": "^0.35.1",
     "mini-css-extract-plugin": "^2.5.3",
     "react-docgen": "^7.1.0",
     "react-refresh": "^0.12.0",
@@ -91,9 +91,12 @@
     "webpack-dev-server": "^4.7.4"
   },
   "dependencies": {
+    "@aws-sdk/client-dynamodb": "^3.731.1",
+    "@aws-sdk/client-s3": "^3.731.1",
     "@reduxjs/toolkit": "^1.8.0",
     "ajv": "^8.17.1",
     "axios": "^0.26.1",
+    "chromatic": "^11.25.0",
     "concurrently": "^7.0.0",
     "i18next": "^21.6.11",
     "i18next-browser-languagedetector": "^6.1.3",
@@ -104,5 +107,20 @@
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
     "ts-node-dev": "^2.0.0"
+  },
+  "loki": {
+    "configurations": {
+      "chrome.laptop": {
+        "target": "chrome.app",
+        "width": 1366,
+        "height": 768,
+        "deviceScaleFactor": 1,
+        "mobile": false
+      },
+      "chrome.iphone7": {
+        "target": "chrome.app",
+        "preset": "iPhone 7"
+      }
+    }
   }
 }
