--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -25,6 +25,6 @@ jobs:
       - name: Lint code
         run: npm run lint:ts
       - name: Lint scss
-        run: npm run lint:scss
+        run: npm run stylelint:ts
       - name: Test code
         run: npm run test:unit
