--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -28,3 +28,7 @@ jobs:
         run: npm run stylelint:ts
       - name: Test code
         run: npm run test:unit
+      - name: Build Storybook
+        run: npm run storybook:build
+      - name: Test Scrernshots
+        run: npm run test:ui:ci
