--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "test:unit": "jest --config ./config/jest/jest.config.ts",
     "test:ui": "npx loki test",
     "test:ui:ok": "npx loki approve",
-    "test:ui:ci": "npx loki --requireReference --reactUri file:./storybook-static",
+    "test:ui:ci": "npx loki --requireReference --reactUri file:http://localhost:6006",
     "storybook": "storybook dev -p 6006 -c ./config/storybook",
     "storybook:build": "storybook build -c ./config/storybook"
   },
@@ -112,7 +112,6 @@
     "ts-node-dev": "^2.0.0"
   },
   "loki": {
-    "reactUri": "file:./storybook-static",
     "configurations": {
       "chrome.laptop": {
         "target": "chrome.app",
