--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -30,5 +30,7 @@ jobs:
         run: npm run test:unit
       - name: Build Storybook
         run: npm run storybook:build
+      - name: Run Storybook
+        run: npm run storybook
       - name: Test Screenshots
         run: npm run test:ui:ci
