--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "webpack serve --env port=3000",
+    "start:server": "node ./json-server/index.js",
     "build:prod": "webpack --env mode=production",
     "build:dev": "webpack --env mode=development",
     "lint:ts": "eslint '**/*.{ts,tsx}'",
@@ -75,7 +76,7 @@
     "identity-obj-proxy": "^3.0.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
-    "json-server": "^0.17.0",
+    "json-server": "^0.17.4",
     "loki": "^0.35.1",
     "mini-css-extract-plugin": "^2.5.3",
     "react-docgen": "^7.1.0",
