add profile page, new common components

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -16,5 +16,9 @@
   ],
   "css.validate": false,
   "scss.validate": false,
-  "stylelint.validate": ["css", "scss"],
+  "stylelint.validate": [
+    "css",
+    "scss"
+  ],
+  "github.copilot.chat.completionContext.typescript.mode": "off",
 }
